# gestelt

./: .gitignore  19_April_demo.params  2023-12-12-08-35-18.bag  2023-12-12-08-48-55.bag  5_April_real_no_integrator_drone3.params  Changelog.md  Dockerfile  Manifest.toml  Project.toml  README.md  TODO.md  checkswarm.cpp  drag_large_wn_small_damping_good.params  min_snap_v1_13_0_RPT.params  min_snap_v1_13_0_RPT30deg_aggressive_12Dec2023.params  min_snap_v1_13_0_RPT_aggressive.params  min_snap_v1_13_0_aggressive.params  min_snap_v1_13_0_fix.params  min_snap_v1_13_0_slow_fly.params  mpc_v1.c  nn_pre.pth  no_integrator_drone3.params  script.sh  setup.md  simulators.repos  suit_for_sim_Drone1_12Dec23.params  thirdparty.repos  vertical_loops.params
dynamic_brushfire/: CMakeLists.txt  README.md  package.xml
dynamic_brushfire/config/: dynamic_brushfire.yaml
dynamic_brushfire/launch/: static_brushfire.launch
dynamic_brushfire/maps/: final.ppm
dynamic_brushfire/src/: dynamicvoronoi.cpp  example.cpp  static_brushfire.cpp  static_brushfire_node.cpp
fake_map/: CMakeLists.txt  README.md
fake_map/config/: forest_generate.yaml
fake_map/src/: fake_map.cpp  fake_map_generator.cpp
gestalt_bringup/: CMakeLists.txt  README.md  package.xml
gestalt_bringup/config/: raynor_iris4.params
gestalt_bringup/launch/: advanced_param.xml  rviz.launch
gestalt_bringup/scripts/: gazebo_sim_multi_uav.sh  gazebo_sim_single_uav.sh  global_planner_test.py  mission_startup.py  mission_startup_and_send_wp.py  send_waypoints.py  simple_sim.sh  test_global_planner.py  test_gz_single.sh  test_mission.py  test_send_waypoints.py  tracking_error_plot.xml
gestalt_bringup/src/: cloud_repub_node.cpp  gestalt_bringup_node.cpp  swarm_collision_checker.cpp  uav_tf_broadcaster.cpp
gestelt_bringup/: CMakeLists.txt  README.md  package.xml
gestelt_bringup/config/: back_end.yaml  example_flocking_config.yaml  fake_drone_params.yaml  fake_laser_params.yaml  fake_sensor_params.yaml  front_end.yaml  learning_agile_mission.yaml  map_parameters.yaml  navigator.yaml  px4_config.yaml  px4_pluginlists.yaml  simulation_parameters.yaml  training_params.yaml  traj_server_default.yaml  voronoi_planner.yaml
gestelt_bringup/customized_controller/: Nuswarm_drone1_final_demo_16April2024.params  sim_from_Nuswarm_drone1_final_demo_16April2024.params
gestelt_bringup/flight_params/: nuswarm_actual_7_11_23_old_fcu.params  nuswarm_sitl_9_7_24.params
gestelt_bringup/jmavsim/: Simulator.java
gestelt_bringup/launch/: advanced_param.xml  benchmark_aggregator.launch  ego_planner.launch  hardware_monitor.launch  rviz.launch  trajectory_server.launch  trajectory_server.xml
gestelt_bringup/scripts/: base_station.sh  bubble_planner_multi.sh  bubble_planner_single.sh  bubble_planner_test.sh  debug_plan.sh  docker_sitl_bringup_learning_agile_drone_distributed.sh  docker_sitl_bringup_learning_agile_laptop_distributed.sh  drone_remote_launch_env.sh  ego_single.sh  ego_single_fake.sh  ego_test.sh  fake_drone_bringup.sh  gazebo_sim_multi_uav.sh  offboard.sh  path_4d.pickle  planner_ocp.json  prepare_real_flight_mpc_script.sh  radxa_central.sh  radxa_central_hitl.sh  radxa_central_sitl.sh  radxa_simulated_uav.sh  radxa_uav.sh  raynor_8_8_23.params  real_drone_bringup_learning_agile_drone_distributed.sh  real_drone_bringup_learning_agile_record_remote.sh  real_flight_bringup_drone.sh  real_flight_bringup_learning_agile_drone.sh  real_flight_bringup_learning_agile_record_remote.sh  real_flight_bringup_record_remote.sh  scenario.sh  scenario_hitl_base.sh  scenario_hitl_drone.sh  scenario_sitl_drone.sh  simple_sim.sh  sitl_bringup_learning_agile.sh  sitl_bringup_learning_agile_drone_distributed.sh  sitl_bringup_learning_agile_laptop_distributed.sh  sitl_drone_bringup.sh  sitl_drone_bringup_SE3.sh  sitl_drone_bringup_SE3_circular.sh  (+32 more)
gestelt_bringup/src/: Multiple_Circle_Trajectory.py  benchmark_aggregator.cpp  circular_mission.py  circular_mission_modify_mavros.py  cone.py  debug_plan.py  demo_2.py  demo_trajectory.py  dive.py  drop.py  figure_8.py  flip.py  hardware_monitor.cpp  helix.py  hover_anywhere_mission.py  julia_test.py  land.py  learning_agent_node.py  learning_agile.py  learning_agile_agent.py  learning_agile_mission.py  learning_agile_node.py  mission.py  mission_bubble_planner.py  mission_bubble_planner_test.py  mission_ego.py  mission_ego_test.py  multiple_circle_trajectory.py  perception_mission.py  reverse_circle.py  ruckig_mission.py  setpoint_mission.py  square.py  swarm_collision_checker.cpp  take_off.py  u_shape.py  vertical_circle_trajectory.py
gestelt_central/fake_drone/: CMakeLists.txt  package.xml
gestelt_central/trajectory_planner/: CMakeLists.txt  package.xml
gestelt_mapping/: CMakeLists.txt  package.xml
gestelt_mapping/grid_map/: CMakeLists.txt  package.xml
gestelt_mapping/plan_env/: CMakeLists.txt  package.xml
gestelt_mapping/src/: simple_example.cpp
gestelt_msgs/gestelt_msgs/: CMakeLists.txt  package.xml
gestelt_navigation/ego_planner_fsm/: CMakeLists.txt  package.xml
gestelt_navigation/global_planner/: CMakeLists.txt  README.md  package.xml
gestelt_navigation/navigator/: CMakeLists.txt  README.md  package.xml
gestelt_navigation/sfc_generation/: CMakeLists.txt  package.xml
gestelt_perception/: CMakeLists.txt  package.xml
gestelt_perception/central_benchmark/: CMakeLists.txt
gestelt_perception/config/: config.yaml
gestelt_perception/grid_map/: CMakeLists.txt  README.md  package.xml
gestelt_perception/launch/: drone_vision_node.launch
gestelt_perception/perception_tools/: CMakeLists.txt  (+2 more)
gestelt_utils/: CMakeLists.txt  package.xml
ikd_tree/: README.md  package.xml
mpc_ros_wrapper/: CMakeLists.txt  package.xml
planner_adaptor/: CMakeLists.txt  README.md  package.xml
radxa_utils/: CMakeLists.txt  PX4_HITL_setup.md  README.md  metrics.md  package.xml  radxa_setup.md
ruckig_planner/: CMakeLists.txt  package.xml
trajectory_server/: CMakeLists.txt  package.xml
trajectory_server_msgs/: CMakeLists.txt  package.xml
voronoi_planner/: CMakeLists.txt  README.md  package.xml
(+933 files in other folders)
