<?xml version="1.0"?>
<package format="2">
  <name>gestelt_bringup</name>
  <version>0.0.0</version>
  <description>The gestelt_bringup package</description>

  <maintainer email="johntgz@nus.edu.sg">John Tan </maintainer>
  <license>MIT</license>
  <author email="johntgz@nus.edu.sg">John Tan</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

  <exec_depend>voronoi_planner</exec_depend>
  <exec_depend>fake_map</exec_depend>
  <exec_depend>fake_drone</exec_depend>
  <exec_depend>swarm_collision_checker</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
