<?xml version="1.0"?>
<package format="2">
  <name>ikd_tree</name>
  <version>0.0.1</version>
  <description>The ikd_tree project packaged for ROS1. Written by HKU MARS </description>

  <maintainer email="johntgz@nus.edu.sg">JohnTGZ</maintainer>

  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>

</package>
