<?xml version="1.0"?>
<package format="2">
  <name>planner_adaptor</name>
  <version>0.0.0</version>
  <description>The planner_adaptor package</description>

  <maintainer email="john@todo.todo">john</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

  <depend>std_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>gestelt_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>traj_opt</depend>
  <depend>traj_utils</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
