<?xml version="1.0"?>
<package format="2">
  <name>radxa_utils</name>
  <version>0.0.0</version>
  <description>The radxa_utils package</description>

  <maintainer email="john@todo.todo">john</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <depend>std_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
