<?xml version="1.0"?>
<package format="2">
  <name>voronoi_planner</name>
  <version>0.0.1</version>
  <description>The voronoi_planner package</description>

  <maintainer email="johntgz@nus.edu.sg">john tan</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

  <depend>nav_msgs</depend>
  <depend>global_planner</depend>
  <depend>dynamic_voronoi</depend>
  <depend>gestelt_msgs</depend>

  <depend>grid_map</depend>
  

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
