<?xml version="1.0"?>
<package format="2">
  <name>fake_drone</name>
  <version>0.0.0</version>
  <description>The fake_drone package</description>

  <maintainer email="johntgz@nus.edu.sg">John Tan </maintainer>
  <license>MIT</license>
  <author email="johntgz@nus.edu.sg">John Tan</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf2_ros</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
