<?xml version="1.0"?>
<package format="2">
  <name>global_planner</name>
  <version>0.0.1</version>
  <description>The global_planner package</description>

  <maintainer email="johntgz@nus.edu.sg">john tan</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

  <depend>grid_map</depend>
  <depend>std_msgs</depend>
  <!-- <depend>cv_bridge</depend> -->
  <depend>geometry_msgs</depend> 
  <depend>visualization_msgs</depend>
  <depend>jps3d</depend>
  <depend>logger</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
